# add_target

./: .gitmodules  CMakeLists.txt  README.md  add_target.cmake  io1_add_target.cmake  test_fetch_source_files.cmake  test_fetch_source_groups.cmake  test_fetch_sources_and_groups.cmake  test_parse_file_options.cmake
.github/workflows/: check_cmake_format.yml  do_cmake_format.yml  unit_tests.yml
reference_project/: CMakeLists.txt
test/: add_source_file.cmake  fetch_source_groups.cmake  is_source_group.cmake  parse_file_options.cmake  update_source_group.cmake
test_project/: CMakeLists.txt
